--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "next": "latest",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
