Convert SMIL to CSS

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
   "presets": ["next/babel"],
-  "plugins": ["inline-react-svg"]
+  "plugins": [
+    [
+      "inline-react-svg",
+      {
+        "svgo": false
+      }
+    ]
+  ]
 }
