--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "export": "next export"
   },
   "dependencies": {
+    "babel-plugin-inline-react-svg": "^0.5.2",
     "classnames": "^2.2.5",
-    "next": "^4.1.3",
+    "next": "^4.2.2",
     "react": "16",
+    "react-anime": "^2.0.1",
     "react-dom": "16"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "babel-plugin-inline-react-svg": "^0.5.2"
-  }
+  "license": "MIT"
 }
