--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2",
     "classnames": "^2.2.5",
-    "next": "^4.2.2",
-    "react": "16",
-    "react-anime": "^2.0.1",
-    "react-dom": "16"
+    "next": "^5.0.0",
+    "react": "^16.2.0",
+    "react-anime": "^2.1.0",
+    "react-dom": "^16.2.0"
   },
   "license": "MIT"
 }
